--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="Experienced Senior Principal Engineer and Tech Leader specializing in E-commerce and Retail Technology. Expertise in technical design, team leadership, and cybersecurity. Committed to driving innovation and ensuring secure, efficient solutions.">
     <meta name="keywords" content="Jon Richards, Jon, Richards Security, Jon Richards E-commerce, Jon Richards Retail">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/ico" href="favicon.ico">
 </head>
 
 <body>
